fixed imaging distortion and border style conflicts.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,5 @@
 body, html, #mainContainer {
-    height: 94.5%;
+    height: 100%;
 }
 
 body {
@@ -47,7 +47,8 @@ h1 {
     }
 
 #mainContainer {
-
+  width: 100%;
+  height: 100%;
 }
 
     #headerLogo {
@@ -115,14 +116,12 @@ h1 {
    }
 
         #mainContent {
-          width: 80%;
-          height: 100%;
-          margin: 0 auto;
+          width: 70%;
+          min-height: 100%;
+          margin-left: auto;
+          margin-right: auto;
+          padding-bottom: 3em;
           background-color: rgba(25,255, 105, .4);
-/*          border-width: 25px;
-          border-style: outset;
-          border-color: rgb(32,255,128);*/
-
           border-left: 25px solid rgb(0,178,128);
           border-right: 25px solid rgb(0,178,128);
           border-top: 25px solid rgb(32,255,128);
@@ -130,18 +129,19 @@ h1 {
         }
 
             .indexContainer {
-              width: 100%;
-              height: 100%;
+              max-width: 100%;
+              max-height: 100%;
+              border: 1px solid black;
             }
 
 
                 .slideContainer {
-                  width: 95%;
-                  height: 47%;
+                  width: 90%;
+                  max-height: 40%;
                   margin: 0 auto;
                   overflow: hidden;
-/*                  border:1px solid black;
-*/                }
+                  border: 1px solid black;
+                }
 
                 @media screen and (max-width: 768px){
                     .slideContainer {
@@ -153,8 +153,12 @@ h1 {
                     }
                 }
 
-                    .indSlideContainer {
+                    .tempSlide {
+                      display: block;
+                    }
 
+                    .indSlideContainer {
+                      display: none;
                     }
 
 
@@ -164,8 +168,8 @@ h1 {
                         }
 
                         .imgContent {
-                          width: 100%;
-                          height: 100%;
+                          width: 1100px;
+                          max-height: 450px;
                         }
 
                 .donateBtnContainer {
@@ -195,13 +199,26 @@ h1 {
 
 
             .missionContainer {
-              width: 100%;
-              height: 100%;
+
             }
 
+                .missionContainer>h1 {
+                  color: rgb(0,0,128);
+                }
+
+                .missionStatCont {
+                  width: 80%;
+                  margin: 0 auto;
+                  background-color: black;
+                  color: orangered;
+                }
+
                 .missionStatement {
+                  background-color: rgb(0,0,0);
+                  font-size: 24px;
                   margin-left: 4em;
                   margin-right: 4em;
+                  font-family: 'Taviraj';
                 }
 
             .programsContainer {
@@ -230,9 +247,9 @@ h1 {
 
 
         #myFooter {
-          text-align: center;
-          margin-top: 4em;
+          margin-top: 3em;
           padding: 1em;
+          text-align: center;
           background-color: rgb(244,115,33);
         }
 /*.navContainer {
